[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis"
version = "3.5.0"
description = "CUVIS Python SDK."
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0"
authors = [
    { name = "Cubert GmbH, Ulm, Germany", email = "sdk@cubert-gmbh.com" }
]

dependencies = [
    "cuvis-il>=3.5.0,<3.6.0",
    "typing_extensions; python_version<'3.10'",  # Only for Python 3.9
    "setuptools; python_version>='3.12'"  # Only for Python 3.12+
]

classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
	"Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Image Processing",
]

[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis.python"
Documentation = "https://cubert-hyperspectral.github.io/cuvis.doc/"
Changelog = "https://github.com/cubert-hyperspectral/cuvis.python/releases"
Issues = "https://github.com/cubert-hyperspectral/cuvis.python/issues"

[tool.setuptools]
packages = ["cuvis"]
include-package-data = true

[tool.setuptools.package-data]
cuvis = ["git-hash.txt"]
